# give_me_a_sine

./: Cargo.toml  README.md
pkg/: src_rust.d.ts  src_rust.js  src_rust_bg.wasm  src_rust_bg.wasm.d.ts
src/: lib.rs  main.rs  ui_manifest.rs  wasm.rs
the_library/: Cargo.toml
the_library/src/: color_square.rs  format.rs  graph.rs  lib.rs  math.rs  text_output.rs  user_input.rs
